Update to imgsource

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="15">
     <tr>
-      <td><img src="Nature.PNG" alt="My favourite pic"></td>
+      <td><img src="Nature2.PNG" alt="My favourite pic"></td>
       <td>
         <h1> John Smith </h1>
         <p>
